# GSB-WiFi-AutoLogin

./: .gitignore  GSB-WiFi-AutoLogin.spec  GSB_AutoLogin.spec  README.md  gsb-autologin-core.py  gsb-autologin.py  pyproject.toml
.github/workflows/: ci.yml
.old/0.9.1-src/: gsb-autologin.py  requirements.txt
.old/0.9.9/: gsb-autologin.py  requirements.txt
0.9.2-beta/: dashboard_ui.py  gsb_autologin.py  login_ui.py
frontend/: index.html
frontend/css/: components.css  giris.css  hosgeldin.css  log.css  theme.css
frontend/js/: app.js  giris.js  hosgeldin.js  log.js
src/: __init__.py  config.py  errors.py  gsb-autologin.py  main.py  network.py  parser.py  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  crypto.rs  errors.rs  main.rs  network.rs  parser.rs
src/ui/: __init__.py  app.py  giris_ekrani.py  hosgeldin_ekrani.py  log_penceresi.py  widgets.py
