[project]
name = "gsb-wifi-autologin"
version = "1.0.0"
description = "GSB WiFi agina otomatik giris uygulamasi"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "cryptography>=41,<46",
    "requests>=2.31,<3",
    "urllib3>=2,<3",
    "customtkinter>=5.2,<6",
    "Pillow>=10,<12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.8",
    "pyinstaller>=6",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
