[package]
name = "gsb-wifi-autologin"
version = "1.6.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
scraper = "0.22"
tokio = { version = "1", default-features = false, features = ["net", "sync", "time"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
base64 = "0.22"
thiserror = "2"
dirs = "6"
hostname = "0.4"
mac_address = "1"
rand = "0.8"
url = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
